[package]
name = "teldbg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.21.2", features = [ "full" ] }
#tokio = { version = "1", default-features = false, features = [
#    "rt-multi-thread",
#    "macros",
#    "tracing",
#] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
#nectar = { git = "https://github.com/robertwayne/nectar", version = "0.1" }
nectar = { path = "/home/olsuh/.cargo/git/checkouts/nectar-484b63488db49ee0/775c119" }
futures = { version = "0.3", features = ["thread-pool"] }

serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
tracing = "0.1"
toml = "0.5"
anyhow = "1.0.66"
nom = "7.1.1"

libffi = { version = "3.0.1", features = ["system"] } #
memmap = "0.7.0"
memmapix = "0.6.3"


#[features]


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"